feat: fixed and optimized updateBanner method, added user banner caching (using go-cache)
todo:
1) debug caching
2) add caching for GetAllBanners?
3) add handlers for feature and tags?
4) tests
5) cleanup code (todos)
6) satisfy linter
