# internal/handler/banner/user/handler.go
@@ -3,6 +3,7 @@ package user
 import (
 	"avito-backend-trainee-2024/internal/domain/entity"
 	"avito-backend-trainee-2024/internal/handler/mapper"
+	"avito-backend-trainee-2024/internal/handler/middleware"
 	"context"
 	"fmt"
 	"github.com/go-chi/chi/v5"
@@ -61,18 +62,13 @@ func (h *Handler) Routes() *chi.Mux {
 //	@Param token 	header string true "user auth token"
 //	@Param			feature_id	query		string	true	"id of the feature"
 //	@Param			tag_ids		query		[]int	true	"ids of the tags"
+//	@Param			use_last_revision		query		bool	true	"use last revision?"
 //	@Success		200			{object}	response.GetUserBannerResponse
 //	@Failure		401			{string}	Unauthorized
 //	@Failure		400			{string}	invalid		request
 //	@Failure		500			{string}	internal	error
 //	@Router			/avito-trainee/api/v1/user_banner [get]
 func (h *Handler) GetBannerByFeatureAndTags(rw http.ResponseWriter, req *http.Request) {
-	// todo: auth
-
-	// TODO: get_last_revision flag
-
-	// TODO: banners that has is_active=false available to fetch only for admins!
-
 	featureID, err := handlerutils.GetIntParamFromQuery(req, "feature_id")
 	if err != nil {
 		msg := fmt.Sprintf("error occurred getting 'feature_id' query param: %v", err)
@@ -97,6 +93,21 @@ func (h *Handler) GetBannerByFeatureAndTags(rw http.ResponseWriter, req *http.Re
 		return
 	}
 
-	render.JSON(rw, req, mapper.MapBannerToUserBannerResponse(banner))
+	// return to users only active banners, if user = admin, then return anyway
+	if !banner.IsActive && req.Header.Get("is_admin") != "true" {
+		msg := "banner is inactive"
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusNoContent, msg, msg)
+		return
+	}
+
+	resp := mapper.MapBannerToUserBannerResponse(banner)
+
+	if middlewareData, ok := req.Context().Value(req.URL.RequestURI()).(middleware.MiddlewareData); ok {
+		middlewareData["banner"] = resp
+		middlewareData["is_active"] = banner.IsActive
+	}
+
+	render.JSON(rw, req, resp)
 	rw.WriteHeader(http.StatusOK)
 }
